--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.application.name=storefront
 
-spring.datasource.url=jdbc:mysql://localhost:3306/storefront
-spring.datasource.username=root
-spring.datasource.password=rootroot
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/storefront
+spring.r2dbc.username=root
+spring.r2dbc.password=rootroot
 
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
