Add logging and multipart files props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.r2dbc.username=root
 spring.r2dbc.password=rootroot
 
 spring.sql.init.mode=always
+
+# Multipart configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Logging configuration
+logging.level.org.springframework.web=DEBUG
+logging.level.com.cherniva.storefront=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
