--- a/storefront/pom.xml
+++ b/storefront/pom.xml
@@ -66,6 +66,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.cherniva</groupId>
 			<artifactId>payment</artifactId>
 			<version>${project.version}</version>
