Rename ProductPageService back into ProductService Add redis template for caching

--- a/storefront/src/main/resources/application.properties
+++ b/storefront/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
+
+#Redis configuration
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
+redis.template.ttl=1
