intorduce security chain. Add logout buttons

--- a/storefront/src/main/resources/application.properties
+++ b/storefront/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=storefront
 
+# Allow bean definition overriding to resolve security configuration conflicts
+spring.main.allow-bean-definition-overriding=true
+
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/storefront
 spring.r2dbc.username=root
 spring.r2dbc.password=rootroot
