--- a/storefront/src/main/resources/application.properties
+++ b/storefront/src/main/resources/application.properties
@@ -29,3 +29,17 @@ spring.thymeleaf.cache=false
 spring.data.redis.host=127.0.0.1
 spring.data.redis.port=6379
 redis.template.ttl=1
+
+#Keycloak configuration
+spring.security.oauth2.client.provider.keycloak.authorization-uri=http://localhost:8082/realms/master/protocol/openid-connect/auth
+spring.security.oauth2.client.provider.keycloak.token-uri=http://localhost:8082/realms/master/protocol/openid-connect/token
+spring.security.oauth2.client.provider.keycloak.user-info-uri=http://localhost:8082/realms/master/protocol/openid-connect/userinfo
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=sub
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://localhost:8082/realms/master/protocol/openid-connect/certs
+
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.provider=keycloak
+spring.security.oauth2.client.registration.keycloak.client-id=test
+spring.security.oauth2.client.registration.keycloak.client-secret=s8NcHgjmkk2devRpox9E3S683uNhUyw8
+spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
