--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 payment.balance=1000
 
 server.port=8081
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8082/realms/master
