--- a/storefront/src/main/resources/application.properties
+++ b/storefront/src/main/resources/application.properties
@@ -43,3 +43,12 @@ spring.security.oauth2.client.registration.keycloak.client-id=test
 spring.security.oauth2.client.registration.keycloak.client-secret=s8NcHgjmkk2devRpox9E3S683uNhUyw8
 spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
+
+# Payment service client credentials configuration
+spring.security.oauth2.client.registration.keycloak.provider.issuer-uri=http://localhost:8082/realms/master
+spring.security.oauth2.client.registration.payment-service.provider=keycloak
+spring.security.oauth2.client.registration.payment-service.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.payment-service.client-id=payment-test
+spring.security.oauth2.client.registration.payment-service.client-secret=iiqfdvL2xCkJrSERqDJGeszRs1zhCvho
+spring.security.oauth2.client.registration.payment-service.scope=profile
+spring.security.oauth2.client.registration.payment-service.clientAuthenticationMethod=client_secret_post
